# agent-repoguardian

./: .env.tmpl  LICENSE  README.md  pyproject.toml  requirements.txt  todo.md
evaldata/one_random/: one_random_claude-3-5-sonnet_batched_after_results.json  one_random_claude-3-5-sonnet_batched_before_results.json  one_random_claude-3-5-sonnet_labeled_after_results.json  one_random_claude-3-5-sonnet_labeled_before_results.json  one_random_claude-3-5-sonnet_simple_after_results.json  one_random_claude-3-5-sonnet_simple_before_results.json  one_random_claude-3-haiku_batched_after_results.json  one_random_claude-3-haiku_batched_before_results.json  one_random_claude-3-haiku_simple_after_results.json  one_random_claude-3-haiku_simple_before_results.json  one_random_gpt-4o-mini_batched_after_results.json  one_random_gpt-4o-mini_batched_before_results.json  one_random_gpt-4o-mini_classified_after_results.json  one_random_gpt-4o-mini_classified_before_results.json  one_random_gpt-4o-mini_labeled_after_results.json  one_random_gpt-4o-mini_labeled_before_results.json  one_random_gpt-4o-mini_largeclassified_after_results.json  one_random_gpt-4o-mini_largeclassified_before_results.json  one_random_gpt-4o-mini_simple_after_results.json  one_random_gpt-4o-mini_simple_before_results.json  one_random_gpt-4o-snap_batched_after_results.json  one_random_gpt-4o-snap_batched_before_results.json  one_random_gpt-4o-snap_classified_after_results.json  one_random_gpt-4o-snap_classified_before_results.json  one_random_gpt-4o-snap_labeled_after_results.json  (+5 more)
src/llm/: consts.py  provider.py  (+1 more)
(+38 files in other folders)
